--- a/tiket.html
+++ b/tiket.html
@@ -7,6 +7,9 @@
     <title>Simple Table</title>
 </head>
 <body>
+    <div class="abcd">
+       <button><a href="index.html">Back</a></button>
+    </div>
     <h1>Tiket Travel</h1>
     <section id="tiket">
     <table>
